--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "jest --passWithNoTests"
   },
   "author": "ion",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jest": "^30.0.0"
+  }
 }
