--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "scripts": {
     "start": "node index.js",
+    "docs": "documentation build src/**/*.js  -f html -o docs",
     "test": "jest --passWithNoTests"
   },
   "author": "ion",
   "license": "MIT",
   "devDependencies": {
+    "documentation": "^14.0.3",
     "jest": "^30.0.0"
   },
   "dependencies": {
